--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -23,6 +23,11 @@ ul li a{text-decoration: none;}
 			color:#000;
     		line-height: 30px;
 		}
+		.secondlist{
+			display:none;
+			color:#ccc;
+			margin-left:10px;
+		}
 	}
 	.right{
 		width:1000px;
